# condeve

./: CHANGELOG.md  LICENSE  README.md  condeve.cabal
dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
lib/: CDV.hs
