cabal-version:      3.0
name:               condeve
version:            0.1.0.0
synopsis:           Contiguous Depth Vector data structure
-- description:
homepage:           github.com/zorodendron/condeve
license:            MIT
license-file:       LICENSE
author:             zorodendron
-- maintainer:         
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  CDV
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.0.0,
                      vector ==0.13.1.0
    hs-source-dirs:   lib
    default-language: Haskell2010

test-suite condeve-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.19.0.0,
        condeve
